[workspace]
[package]
version = "0.1.0"
name = "bn254-benchmark-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
hex = "0.4"
